# tap-postmark

./: .gitignore  README.md  meltano.yml  pyproject.toml  pytest.ini
tap_postmark/: streams.py  tap.py
