[tool.poetry]
name = "tap-postmark"
version = "0.0.1"
description = "`tap-postmark` is a Singer tap for postmark, built with the Meltano Singer SDK."
authors = ["Mathieu Hinderyckx"]
keywords = [
    "ELT",
    "postmark",
]
license = "Apache 2.0"
packages = [
    { include = "tap_postmark" },
]

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = { version="^0.15.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
arrow = "^1.2.3"
orjson = "^3.8.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
ipdb =  "^0.13.11"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_postmark"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-postmark = 'tap_postmark.tap:TapPostmark.cli'
